--- a/style/main.scss
+++ b/style/main.scss
@@ -1528,9 +1528,9 @@ body {
         @include rwd(960) {
           max-width: 1200%;
         }
-        @include rwd(850) {
-          max-width: 1300%;
-        }
+        // @include rwd(850) {
+        //   max-width: 1300%;
+        // }
         @include rwd(600) {
           max-width: 700%;
         }
@@ -1555,10 +1555,14 @@ body {
       }
       @include rwd(1180) {
         padding-left: 125px;
-        margin: 0;
+        margin: 0 auto;
+        
       }
       @include rwd(960) {
-        padding-left: 0;
+        padding-left: 20px;
+      }
+      @include rwd(815) {
+
       }
     }
     .slick-slide {
@@ -1578,6 +1582,7 @@ body {
       }
       .img {
         overflow: hidden;
+        border-radius: 20px;
         @include rwd(1180) {
           margin-left: 50px;
           border-radius: 30px;
@@ -1728,6 +1733,9 @@ body {
       @include rwd(1180) {
         position: relative;
       }
+      @include rwd(599) {
+        max-width: none;
+      }
       .slick-track {
         max-width: 300%;
       }
@@ -1820,6 +1828,9 @@ body {
               padding: 7px 0 0 15px;
             }
           }
+          .event_txt{
+            margin-bottom: 20px;
+          }
         }
         .event_about {
           padding-top: 20px;
@@ -1828,6 +1839,11 @@ body {
             position: absolute;
             bottom: -35%;
           }
+          @include rwd(737) {
+            position: absolute;
+            bottom: -40%;
+          }
+
           .arrow {
             width: 60px;
             height: 1px;
@@ -1891,6 +1907,9 @@ body {
         position: absolute;
         top: 80px;
         left: 40%;
+      }
+      @include rwd(700) {
+        left: 30%;
       }
       .slick-active {
         &::after {
