--- a/style/main.css
+++ b/style/main.css
@@ -182,6 +182,10 @@ html:has(.start_ad.on),
 body:has(.start_ad.on) {
   overflow-y: hidden;
 }
+html:has(.privacy_option.on),
+body:has(.privacy_option.on) {
+  overflow-y: hidden;
+}
 
 .start_bg {
   width: 100%;
@@ -237,6 +241,63 @@ body:has(.start_ad.on) {
   }
 }
 
+.start_ad {
+  display: none;
+}
+.start_ad.on {
+  display: block;
+}
+.start_ad.off {
+  display: none;
+}
+.start_ad .mask {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 5;
+}
+.start_ad .inner {
+  width: 700px;
+  padding: 20px;
+  text-align: center;
+  background-color: #fff;
+  z-index: 5;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  color: #63bedf;
+}
+.start_ad .inner .txt h2 {
+  font-weight: bolder;
+}
+.start_ad .inner .inner_close {
+  width: 30px;
+  height: 30px;
+  background-color: #63bedf;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+}
+.start_ad .inner .inner_close::before, .start_ad .inner .inner_close::after {
+  content: "";
+  width: 25px;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  background-color: #fff;
+}
+.start_ad .inner .inner_close::before {
+  transform: rotate(-45deg);
+}
+.start_ad .inner .inner_close::after {
+  transform: rotate(45deg);
+}
+
 .menu_bg {
   width: 100%;
   height: 100vh;
@@ -275,6 +336,12 @@ body:has(.start_ad.on) {
   right: 2%;
   top: 10%;
   z-index: 2;
+  display: none;
+}
+@media screen and (max-width: 1180px) {
+  .menu_bg .wrap .header_box {
+    display: block;
+  }
 }
 .menu_bg .wrap .header_box .language_box {
   padding: 25px 10px;
@@ -371,14 +438,19 @@ body:has(.start_ad.on) {
   width: 100%;
   max-width: 880px;
   padding-top: 3px;
-  padding-left: 160px;
   position: absolute;
   top: 35%;
-  left: 10%;
+  left: 20%;
   display: flex;
   flex-wrap: wrap;
   z-index: 3;
   color: #fff;
+}
+@media screen and (max-width: 1500px) {
+  .menu_bg .wrap .menu_bg_list ul {
+    padding-left: 160px;
+    left: 0;
+  }
 }
 @media screen and (max-width: 1180px) {
   .menu_bg .wrap .menu_bg_list ul {
@@ -440,13 +512,18 @@ body:has(.start_ad.on) {
   }
 }
 .menu_bg .wrap .menu_bg_list .top_box {
-  width: 100%;
-  position: relative;
-  top: 35%;
-  right: 20%;
+  width: 50%;
   z-index: 2;
   color: #fff;
   letter-spacing: 0.8px;
+  position: absolute;
+  top: 35%;
+  left: 60%;
+}
+@media screen and (max-width: 1730px) {
+  .menu_bg .wrap .menu_bg_list .top_box {
+    left: 70%;
+  }
 }
 @media screen and (max-width: 1180px) {
   .menu_bg .wrap .menu_bg_list .top_box {
@@ -454,6 +531,8 @@ body:has(.start_ad.on) {
     position: relative;
     left: 0;
     top: -5%;
+    display: flex;
+    flex-direction: column;
   }
 }
 @media screen and (max-width: 840px) {
@@ -470,6 +549,7 @@ body:has(.start_ad.on) {
 .menu_bg .wrap .menu_bg_list .top_box .email p {
   position: relative;
   cursor: pointer;
+  white-space: nowrap;
 }
 .menu_bg .wrap .menu_bg_list .top_box .address p::after,
 .menu_bg .wrap .menu_bg_list .top_box .tel p::after,
@@ -518,6 +598,9 @@ body:has(.start_ad.on) {
   transition: 0.5s;
   opacity: 0.5;
 }
+.menu_bg .wrap .menu_bg_list .top_box .address p {
+  margin-left: 30px;
+}
 .menu_bg::before {
   content: "";
   width: 100%;
@@ -527,63 +610,6 @@ body:has(.start_ad.on) {
   left: 0;
   background: linear-gradient(to bottom, rgba(59, 175, 219, 0.5) 0%, rgba(54, 175, 101, 0.5) 100%);
   z-index: 2;
-}
-
-.start_ad {
-  display: none;
-}
-.start_ad.on {
-  display: block;
-}
-.start_ad.off {
-  display: none;
-}
-.start_ad .mask {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 5;
-}
-.start_ad .inner {
-  width: 700px;
-  padding: 20px;
-  text-align: center;
-  background-color: #fff;
-  z-index: 5;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 36px;
-  color: #63bedf;
-}
-.start_ad .inner .txt h2 {
-  font-weight: bolder;
-}
-.start_ad .inner .inner_close {
-  width: 30px;
-  height: 30px;
-  background-color: #63bedf;
-  position: absolute;
-  right: 0;
-  top: 0;
-  cursor: pointer;
-}
-.start_ad .inner .inner_close::before, .start_ad .inner .inner_close::after {
-  content: "";
-  width: 25px;
-  height: 1px;
-  position: absolute;
-  top: 50%;
-  right: 10%;
-  background-color: #fff;
-}
-.start_ad .inner .inner_close::before {
-  transform: rotate(-45deg);
-}
-.start_ad .inner .inner_close::after {
-  transform: rotate(45deg);
 }
 
 .label_list {
@@ -666,6 +692,216 @@ body:has(.start_ad.on) {
   width: 100%;
   height: 100%;
   position: absolute;
+}
+
+.privacy_option {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  z-index: 21;
+  display: none;
+}
+.privacy_option.on {
+  display: block;
+}
+.privacy_option .wrap {
+  max-width: 700px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+.privacy_option .wrap .privacy_close {
+  width: 30px;
+  height: 30px;
+  background-color: #63bedf;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+}
+.privacy_option .wrap .privacy_close::before, .privacy_option .wrap .privacy_close::after {
+  content: "";
+  width: 25px;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  background-color: #fff;
+}
+.privacy_option .wrap .privacy_close::before {
+  transform: rotate(-45deg);
+}
+.privacy_option .wrap .privacy_close::after {
+  transform: rotate(45deg);
+}
+.privacy_option .wrap .txt {
+  padding: 50px 30px 30px;
+  font-size: 15px;
+}
+.privacy_option .wrap .txt h2 {
+  font-size: 20px;
+  font-weight: bolder;
+  padding-bottom: 15px;
+}
+.privacy_option .wrap .txt .privacy_about {
+  margin-top: 25px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.privacy_option .wrap .txt .privacy_about .cookies,
+.privacy_option .wrap .txt .privacy_about .all_allow {
+  width: 50%;
+  position: relative;
+}
+.privacy_option .wrap .txt .privacy_about button {
+  height: 40px;
+  min-width: 165px;
+  width: 80%;
+  padding: 10px;
+  position: absolute;
+  background-color: transparent;
+  border: 1px solid #000;
+  border-radius: 50px;
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #000;
+  cursor: pointer;
+}
+.privacy_option .wrap .txt .privacy_about .arrow {
+  width: 60px;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  right: 15%;
+  bottom: -20px;
+}
+.privacy_option .wrap .txt .privacy_about .arrow::before {
+  content: "";
+  width: 1px;
+  height: 15px;
+  position: absolute;
+  right: 3px;
+  bottom: -1px;
+  background-color: #000;
+  transform: rotate(135deg);
+}
+.privacy_option .wrap .txt .privacy_about .cookies:hover button {
+  color: #36af63;
+  border-color: #36af63;
+}
+.privacy_option .wrap .txt .privacy_about .cookies:hover .arrow {
+  transition: right 0.5s;
+  right: 10%;
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .privacy_about .cookies:hover .arrow::before {
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .privacy_about .all_allow:hover button {
+  color: #36af63;
+  border-color: #36af63;
+}
+.privacy_option .wrap .txt .privacy_about .all_allow:hover .arrow {
+  transition: right 0.5s;
+  right: 10%;
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .privacy_about .all_allow:hover .arrow::before {
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .manage {
+  padding: 80px 0 20px;
+}
+.privacy_option .wrap .txt .need {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.privacy_option .wrap .txt .need h3 span {
+  font-weight: bolder;
+}
+.privacy_option .wrap .txt .need .need_txt {
+  display: flex;
+}
+.privacy_option .wrap .txt .need .need_txt p {
+  color: #63bedf;
+  padding-right: 10px;
+}
+.privacy_option .wrap .txt .need .need_txt .slide_need {
+  transform: rotate(0);
+  z-index: 2;
+}
+.privacy_option .wrap .txt .need .need_txt .slide_need.off {
+  transform: rotate(90deg);
+}
+.privacy_option .wrap .txt .manage_txt {
+  background-color: #e1e1e1;
+  padding: 18px 15px;
+  font-size: 15px;
+  line-height: 1.35;
+  transition: all 1s linear;
+}
+.privacy_option .wrap .txt .manage_txt.off {
+  transform: translateY(-20%);
+  opacity: 0;
+}
+.privacy_option .wrap .txt .choose {
+  padding-top: 20px;
+  transition: all 1s linear;
+}
+.privacy_option .wrap .txt .choose.on {
+  transform: translateY(-100%);
+}
+.privacy_option .wrap .txt .choose:hover button {
+  color: #36af63;
+  border-color: #36af63;
+}
+.privacy_option .wrap .txt .choose:hover .arrow {
+  transition: left 0.5s;
+  left: 160px;
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .choose:hover .arrow::before {
+  background-color: #36af63;
+}
+.privacy_option .wrap .txt .choose button {
+  height: 40px;
+  min-width: 180px;
+  padding: 10px;
+  position: relative;
+  background-color: transparent;
+  border: 1px solid #000;
+  border-radius: 50px;
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #000;
+  cursor: pointer;
+}
+.privacy_option .wrap .txt .choose .arrow {
+  width: 60px;
+  height: 1px;
+  background-color: #000;
+  position: relative;
+  left: 135px;
+  top: -18px;
+}
+.privacy_option .wrap .txt .choose .arrow::before {
+  content: "";
+  width: 1px;
+  height: 15px;
+  position: absolute;
+  right: 3px;
+  bottom: -1px;
+  background-color: #000;
+  transform: rotate(135deg);
 }
 
 .header {
@@ -1075,7 +1311,7 @@ body:has(.start_ad.on) {
 }
 .hd_bg .header_bg li h2 {
   top: 50%;
-  left: 1%;
+  left: 7%;
   font-size: 23px;
   opacity: 0;
   display: flex;
@@ -1096,6 +1332,7 @@ body:has(.start_ad.on) {
   .hd_bg .header_bg li h2 {
     font-size: 15px;
     top: 51%;
+    left: 1%;
   }
 }
 @media screen and (max-width: 400px) {
@@ -1171,6 +1408,12 @@ body:has(.start_ad.on) {
   letter-spacing: 1px;
   border-right: 1px solid #fff;
 }
+@media screen and (max-width: 424px) {
+  .hd_bg .hd_news h2 {
+    padding: 0 10px;
+    font-size: 16px;
+  }
+}
 .hd_bg .hd_news .item {
   padding: 0 10px;
   display: flex;
@@ -1180,6 +1423,11 @@ body:has(.start_ad.on) {
 .hd_bg .hd_news .item .title {
   padding-bottom: 10px;
   position: relative;
+}
+@media screen and (max-width: 424px) {
+  .hd_bg .hd_news .item .title {
+    font-size: 12px;
+  }
 }
 .hd_bg .hd_news .item .title::after {
   content: "";
@@ -1376,7 +1624,7 @@ body:has(.start_ad.on) {
 }
 
 .brand {
-  padding: 165px 0 50px;
+  padding: 165px 140px 50px 180px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -1435,7 +1683,7 @@ body:has(.start_ad.on) {
   width: 1px;
   display: flex;
   position: absolute;
-  bottom: 65%;
+  bottom: 45%;
   left: 50%;
   background-color: #63bedf;
 }
@@ -3469,7 +3717,7 @@ body:has(.start_ad.on) {
 }
 .dining ul li .img .dining_more {
   width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  height: calc(100% - 30px);
   position: absolute;
   border-radius: 20px;
   top: 45%;
