--- a/style/main.css
+++ b/style/main.css
@@ -182,6 +182,12 @@ html:has(.start_ad.on),
 body:has(.start_ad.on) {
   overflow-y: hidden;
 }
+@media screen and (max-width: 540px) {
+  html:has(.start_ad.on),
+  body:has(.start_ad.on) {
+    overflow-y: auto;
+  }
+}
 html:has(.privacy_option.on),
 body:has(.privacy_option.on) {
   overflow-y: hidden;
@@ -249,6 +255,11 @@ body:has(.privacy_option.on) {
 }
 .start_ad.off {
   display: none;
+}
+@media screen and (max-width: 540px) {
+  .start_ad.on {
+    display: none;
+  }
 }
 .start_ad .mask {
   width: 100%;
@@ -703,14 +714,13 @@ body:has(.privacy_option.on) {
   display: none;
 }
 .privacy_option.on {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .privacy_option .wrap {
   max-width: 700px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: #fff;
 }
 .privacy_option .wrap .privacy_close {
@@ -752,10 +762,21 @@ body:has(.privacy_option.on) {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 540px) {
+  .privacy_option .wrap .txt .privacy_about {
+    flex-direction: column;
+  }
+}
 .privacy_option .wrap .txt .privacy_about .cookies,
 .privacy_option .wrap .txt .privacy_about .all_allow {
   width: 50%;
   position: relative;
+}
+@media screen and (max-width: 540px) {
+  .privacy_option .wrap .txt .privacy_about .cookies,
+  .privacy_option .wrap .txt .privacy_about .all_allow {
+    width: 100%;
+  }
 }
 .privacy_option .wrap .txt .privacy_about button {
   height: 40px;
@@ -773,6 +794,13 @@ body:has(.privacy_option.on) {
   color: #000;
   cursor: pointer;
 }
+@media screen and (max-width: 540px) {
+  .privacy_option .wrap .txt .privacy_about button {
+    width: 100%;
+    position: relative;
+    margin-bottom: 10px;
+  }
+}
 .privacy_option .wrap .txt .privacy_about .arrow {
   width: 60px;
   height: 1px;
@@ -780,6 +808,13 @@ body:has(.privacy_option.on) {
   position: absolute;
   right: 15%;
   bottom: -20px;
+}
+@media screen and (max-width: 540px) {
+  .privacy_option .wrap .txt .privacy_about .arrow {
+    right: 1%;
+    bottom: auto;
+    top: 21px;
+  }
 }
 .privacy_option .wrap .txt .privacy_about .arrow::before {
   content: "";
@@ -1562,6 +1597,11 @@ body:has(.privacy_option.on) {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 540px) {
+  .hd_bg .remind .hd_about {
+    flex-direction: column;
+  }
+}
 .hd_bg .remind .hd_about button {
   height: 40px;
   min-width: 165px;
@@ -1577,6 +1617,11 @@ body:has(.privacy_option.on) {
   color: #fff;
   cursor: pointer;
 }
+@media screen and (max-width: 540px) {
+  .hd_bg .remind .hd_about button {
+    width: 90%;
+  }
+}
 .hd_bg .remind .hd_about .arrow {
   width: 60px;
   height: 1px;
@@ -1584,6 +1629,11 @@ body:has(.privacy_option.on) {
   position: relative;
   left: 135px;
   top: -18px;
+}
+@media screen and (max-width: 540px) {
+  .hd_bg .remind .hd_about .arrow {
+    left: 85%;
+  }
 }
 .hd_bg .remind .hd_about .arrow::before {
   content: "";
@@ -1601,7 +1651,7 @@ body:has(.privacy_option.on) {
 }
 .hd_bg .remind .hd_about .cookies:hover .arrow {
   transition: left 0.5s;
-  left: 160px;
+  left: 90%;
   background-color: #36af63;
 }
 .hd_bg .remind .hd_about .cookies:hover .arrow::before {
@@ -1610,13 +1660,18 @@ body:has(.privacy_option.on) {
 .hd_bg .remind .hd_about .all_allow {
   padding-left: 100px;
 }
+@media screen and (max-width: 540px) {
+  .hd_bg .remind .hd_about .all_allow {
+    padding-left: 0;
+  }
+}
 .hd_bg .remind .hd_about .all_allow:hover button {
   color: #36af63;
   border-color: #36af63;
 }
 .hd_bg .remind .hd_about .all_allow:hover .arrow {
   transition: left 0.5s;
-  left: 160px;
+  left: 90%;
   background-color: #36af63;
 }
 .hd_bg .remind .hd_about .all_allow:hover .arrow::before {
@@ -2048,6 +2103,11 @@ body:has(.privacy_option.on) {
 @media screen and (max-width: 400px) {
   .field .field_list .slick-list .slick-track {
     max-width: 900%;
+  }
+}
+@media screen and (max-width: 350px) {
+  .field .field_list .slick-list .slick-track {
+    max-width: 800%;
   }
 }
 .field .field_list li {
@@ -3521,11 +3581,6 @@ body:has(.privacy_option.on) {
     max-width: 1000%;
   }
 }
-@media screen and (max-width: 600px) {
-  .dining ul .slick-track {
-    max-width: 1100%;
-  }
-}
 .dining ul .slick-slide {
   max-width: 900px;
 }
@@ -4088,8 +4143,8 @@ body:has(.privacy_option.on) {
 }
 @media screen and (max-width: 840px) {
   .footer .footer_box .wrap {
+    flex-wrap: nowrap;
     flex-direction: column;
-    align-items: center;
   }
 }
 @media screen and (max-width: 400px) {
